[gd_scene load_steps=27 format=3 uid="uid://ccqntl865eqmi"]

[ext_resource type="Script" uid="uid://b310vjoivqxkt" path="res://project/menu/main.gd" id="1_3cfgd"]
[ext_resource type="Texture2D" uid="uid://3722kjsnxjj0" path="res://resources/sprites/menu_background.jpeg" id="1_eewff"]
[ext_resource type="FontFile" uid="uid://dqb4yqu1w14sg" path="res://resources/fonts/PistonBlack-Regular.ttf" id="2_5q4o7"]
[ext_resource type="FontFile" uid="uid://ccanoggeyxrsu" path="res://resources/fonts/Blast Dragon D.otf" id="3_3cfgd"]
[ext_resource type="Script" uid="uid://c7iijlaa3h27k" path="res://project/menu/menu.gd" id="3_5mrjc"]
[ext_resource type="Script" uid="uid://c4blorpi3e0sc" path="res://project/menu/display_selector.gd" id="6_5mrjc"]
[ext_resource type="Texture2D" uid="uid://uwxn53afnyjg" path="res://resources/sprites/ArrowsLeft.png" id="6_rlaii"]
[ext_resource type="Script" uid="uid://lc47lqwtxqj0" path="res://project/menu/endings.gd" id="6_uewes"]
[ext_resource type="Texture2D" uid="uid://bjyef6ekxcoc6" path="res://resources/sprites/mystery.jpg" id="7_e7lu8"]
[ext_resource type="Texture2D" uid="uid://bmx5yhk511y28" path="res://resources/sprites/socks.jpg" id="7_srxbw"]
[ext_resource type="Texture2D" uid="uid://d1fwqxc6bhcqb" path="res://resources/sprites/ArrowsRight.png" id="8_kf8lf"]
[ext_resource type="AudioStream" uid="uid://dac5s00o34t62" path="res://resources/sounds/MenuMusic.mp3" id="9_kf8lf"]
[ext_resource type="Texture2D" uid="uid://cj5tsqm8naeky" path="res://resources/sprites/bigfish.jpg" id="10_e7lu8"]
[ext_resource type="Texture2D" uid="uid://c3it2xnyrw4qc" path="res://resources/sprites/asmrminotaure.jpg" id="11_okx7f"]
[ext_resource type="Texture2D" uid="uid://b3r2j64xtk18b" path="res://resources/characters/ssj_gattouz.png" id="11_sta5p"]
[ext_resource type="Texture2D" uid="uid://fm2bx83kt4wb" path="res://resources/sprites/asterion.jpg" id="13_sif16"]
[ext_resource type="Texture2D" uid="uid://byw72jydujwoh" path="res://resources/characters/gayttouz-removebg-preview.png" id="14_sta5p"]
[ext_resource type="Texture2D" uid="uid://b21afgmk4b6s0" path="res://resources/sprites/epstein_island.jpeg" id="15_sif16"]
[ext_resource type="Texture2D" uid="uid://ykf06lrhx3wr" path="res://resources/backgrounds/mansion_inside.png" id="19_mi0we"]
[ext_resource type="Texture2D" uid="uid://bd2io71nbwalh" path="res://resources/backgrounds/motelroom.jpg" id="20_ro3n7"]
[ext_resource type="Texture2D" uid="uid://c22yjovr0d1x" path="res://resources/backgrounds/manifestation2.jpg" id="20_w0a2v"]
[ext_resource type="Texture2D" uid="uid://bnbovleoorgam" path="res://resources/backgrounds/cropped_street.png" id="21_j4ub7"]
[ext_resource type="Texture2D" uid="uid://ca5x8xh0x6ifk" path="res://resources/backgrounds/devantsnack.jpg" id="23_a21tm"]
[ext_resource type="Texture2D" uid="uid://bx64rit108yuk" path="res://resources/backgrounds/snack.png" id="23_j4ub7"]
[ext_resource type="Texture2D" uid="uid://bqjpg6rd4m3vs" path="res://resources/backgrounds/le_travail_de_Neyjah.png" id="24_phw34"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gh0ne"]

[node name="menu" type="Node2D"]
script = ExtResource("1_3cfgd")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(572, 320.50003)
scale = Vector2(1.476804, 0.62065625)
texture = ExtResource("1_eewff")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 1147.0
offset_bottom = 644.0
script = ExtResource("3_5mrjc")

[node name="Title" type="Label" parent="UI/Menu"]
layout_mode = 0
offset_left = 488.0
offset_top = 37.0
offset_right = 890.0
offset_bottom = 105.0
theme_override_colors/font_color = Color(0.80784315, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5q4o7")
theme_override_font_sizes/font_size = 40
text = "My BestfFriend is a chair"

[node name="MainContain" type="VBoxContainer" parent="UI/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 114.0
offset_top = 132.0
offset_right = -821.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 2

[node name="New game" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "New Game
"
alignment = 0

[node name="Load chapter" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Load Chapter
"
alignment = 0

[node name="SettingsButton" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Settings
"
alignment = 0

[node name="ending" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Endings"
alignment = 0

[node name="About" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "About
"
alignment = 0

[node name="Quit" type="Button" parent="UI/Menu/MainContain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Quit"
alignment = 0

[node name="Endings" type="Control" parent="UI/Menu"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("6_uewes")

[node name="next" type="Button" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 997.0
offset_top = 569.0
offset_right = 1098.0
offset_bottom = 621.0
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Next"
alignment = 0

[node name="Quit" type="Button" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 35.0
offset_top = 569.0
offset_right = 136.0
offset_bottom = 621.0
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Back"
alignment = 0

[node name="mystery1" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 150.0
offset_top = 75.0
offset_right = 375.0
offset_bottom = 250.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="mystery2" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 475.0
offset_top = 75.0
offset_right = 700.0
offset_bottom = 250.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="mystery3" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 785.0
offset_top = 75.0
offset_right = 1010.0
offset_bottom = 250.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="mystery4" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 150.0
offset_top = 350.0
offset_right = 375.0
offset_bottom = 525.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="mystery5" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 475.0
offset_top = 350.0
offset_right = 700.0
offset_bottom = 525.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="mystery6" type="TextureRect" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 785.0
offset_top = 350.0
offset_right = 1010.0
offset_bottom = 525.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="Ending1" type="TextureRect" parent="UI/Menu/Endings"]
visible = false
layout_mode = 0
offset_left = 150.0
offset_top = 75.0
offset_right = 375.0
offset_bottom = 250.0
texture = ExtResource("7_srxbw")
expand_mode = 1

[node name="Ending2" type="TextureRect" parent="UI/Menu/Endings"]
visible = false
layout_mode = 0
offset_left = 475.0
offset_top = 75.0
offset_right = 700.0
offset_bottom = 250.0
texture = ExtResource("10_e7lu8")
expand_mode = 1

[node name="Ending3" type="TextureRect" parent="UI/Menu/Endings"]
visible = false
layout_mode = 0
offset_left = 785.0
offset_top = 75.0
offset_right = 1010.0
offset_bottom = 250.0
expand_mode = 1

[node name="Ending4" type="TextureRect" parent="UI/Menu/Endings"]
visible = false
layout_mode = 0
offset_left = 150.0
offset_top = 350.0
offset_right = 375.0
offset_bottom = 525.0
texture = ExtResource("11_sta5p")
expand_mode = 1

[node name="Ending5" type="TextureRect" parent="UI/Menu/Endings"]
visible = false
layout_mode = 0
offset_left = 475.0
offset_top = 350.0
offset_right = 700.0
offset_bottom = 525.0
texture = ExtResource("11_okx7f")
expand_mode = 1

[node name="Ending6" type="TextureRect" parent="UI/Menu/Endings"]
visible = false
layout_mode = 0
offset_left = 785.0
offset_top = 350.0
offset_right = 1010.0
offset_bottom = 525.0
texture = ExtResource("13_sif16")
expand_mode = 1

[node name="LabelEnding1" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 150.0
offset_top = 250.0
offset_right = 375.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Sock"
horizontal_alignment = 1

[node name="LabelEnding2" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 475.0
offset_top = 250.0
offset_right = 700.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Big Fish"
horizontal_alignment = 1

[node name="LabelEnding3" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 785.0
offset_top = 250.0
offset_right = 1010.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Cuck Lord #1"
horizontal_alignment = 1

[node name="LabelEnding4" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 150.0
offset_top = 525.0
offset_right = 375.0
offset_bottom = 555.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Cuck Lord #2"
horizontal_alignment = 1

[node name="LabelEnding5" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 475.0
offset_top = 525.0
offset_right = 700.0
offset_bottom = 555.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Minotaure"
horizontal_alignment = 1

[node name="LabelEnding6" type="Label" parent="UI/Menu/Endings"]
layout_mode = 0
offset_left = 785.0
offset_top = 525.0
offset_right = 1010.0
offset_bottom = 555.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Asterion"
horizontal_alignment = 1

[node name="Endings2" type="Control" parent="UI/Menu"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="previous" type="Button" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 35.0
offset_top = 569.0
offset_right = 136.0
offset_bottom = 621.0
theme_override_colors/font_color = Color(0.99607843, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0.53333336, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxEmpty_gh0ne")
text = "Previous"
alignment = 0

[node name="mystery7" type="TextureRect" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 150.0
offset_top = 75.0
offset_right = 375.0
offset_bottom = 250.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="mystery8" type="TextureRect" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 475.0
offset_top = 75.0
offset_right = 700.0
offset_bottom = 250.0
texture = ExtResource("7_e7lu8")
expand_mode = 1

[node name="Ending7" type="TextureRect" parent="UI/Menu/Endings2"]
visible = false
layout_mode = 0
offset_left = 150.0
offset_top = 75.0
offset_right = 375.0
offset_bottom = 250.0
texture = ExtResource("14_sta5p")
expand_mode = 1

[node name="Ending8" type="TextureRect" parent="UI/Menu/Endings2"]
visible = false
layout_mode = 0
offset_left = 475.0
offset_top = 75.0
offset_right = 700.0
offset_bottom = 250.0
texture = ExtResource("15_sif16")
expand_mode = 1

[node name="LabelEnding7" type="Label" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 150.0
offset_top = 250.0
offset_right = 375.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Grindr #1"
horizontal_alignment = 1

[node name="LabelEnding8" type="Label" parent="UI/Menu/Endings2"]
layout_mode = 0
offset_left = 475.0
offset_top = 250.0
offset_right = 700.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 19
text = "Grindr #2"
horizontal_alignment = 1

[node name="DisplaySelector" type="Control" parent="UI/Menu"]
visible = false
anchors_preset = 0
offset_top = 3.0
offset_right = 40.0
offset_bottom = 43.0
script = ExtResource("6_5mrjc")

[node name="Display" type="Label" parent="UI/Menu/DisplaySelector"]
layout_mode = 0
offset_left = 348.0
offset_top = 118.0
offset_right = 562.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 24
text = "Display"
text_direction = 1

[node name="Label_Display" type="Label" parent="UI/Menu/DisplaySelector"]
layout_mode = 0
offset_left = 348.0
offset_top = 159.0
offset_right = 424.0
offset_bottom = 185.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 19
text = "Window"

[node name="Label_Volume" type="Label" parent="UI/Menu/DisplaySelector"]
layout_mode = 0
offset_left = 348.0
offset_top = 200.0
offset_right = 420.0
offset_bottom = 226.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3cfgd")
theme_override_font_sizes/font_size = 19
text = "Volume"

[node name="LeftArrow" type="TextureButton" parent="UI/Menu/DisplaySelector"]
layout_mode = 1
anchors_preset = -1
anchor_left = 11.575001
anchor_top = 4.0
anchor_right = 11.875001
anchor_bottom = 4.525
offset_left = -3.0517578e-05
offset_right = -3.0517578e-05
size_flags_stretch_ratio = 0.5
texture_normal = ExtResource("6_rlaii")

[node name="RightArrow" type="TextureButton" parent="UI/Menu/DisplaySelector"]
layout_mode = 1
anchors_preset = -1
anchor_left = 12.475
anchor_top = 4.025
anchor_right = 12.625001
anchor_bottom = 4.55
offset_left = -6.0
offset_right = -3.0517578e-05
texture_normal = ExtResource("8_kf8lf")

[node name="VolumeSlider" type="HSlider" parent="UI/Menu/DisplaySelector"]
layout_mode = 0
offset_left = 463.0
offset_top = 200.0
offset_right = 591.0
offset_bottom = 228.0
value = 50.0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="UI/Menu"]
stream = ExtResource("9_kf8lf")

[node name="Chapters_menu" type="Control" parent="UI/Menu"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Chapter1" type="Button" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 150.0
offset_top = 180.0
offset_right = 375.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_font_sizes/font_size = 23
text = "Chapter 1"

[node name="Chapter2" type="Button" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 150.0
offset_top = 380.0
offset_right = 375.0
offset_bottom = 420.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
text = "Chapter 2"

[node name="Chapter3" type="Button" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 150.0
offset_top = 580.0
offset_right = 375.0
offset_bottom = 623.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Chapter 3"

[node name="Chapter4" type="Button" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 475.0
offset_top = 180.0
offset_right = 700.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
text = "Chapter 4"

[node name="ChapterBrazil" type="Button" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 475.0
offset_top = 380.0
offset_right = 700.0
offset_bottom = 420.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
text = "Extra Brazil"

[node name="ChapterMortadon" type="Button" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 475.0
offset_top = 580.0
offset_right = 700.0
offset_bottom = 620.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
text = "Extra Mortadon"

[node name="ChapterGayttouzz" type="Button" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 800.0
offset_top = 180.0
offset_right = 1025.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
text = "Extra Gayttouze"

[node name="ChapterMinotaure" type="Button" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 800.0
offset_top = 580.0
offset_right = 1025.0
offset_bottom = 620.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_font_sizes/font_size = 23
text = "Extra Ast√©rion"

[node name="ChapterTrump" type="Button" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 800.0
offset_top = 380.0
offset_right = 1025.0
offset_bottom = 420.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 23
text = "Extra Trump"

[node name="Chapter1_preview" type="TextureRect" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 150.0
offset_top = 30.0
offset_right = 375.0
offset_bottom = 180.0
texture = ExtResource("20_ro3n7")
expand_mode = 1

[node name="Chapter2_preview" type="TextureRect" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 150.0
offset_top = 230.0
offset_right = 375.0
offset_bottom = 380.0
texture = ExtResource("20_w0a2v")
expand_mode = 1

[node name="Chapter3_preview" type="TextureRect" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 150.0
offset_top = 430.0
offset_right = 375.0
offset_bottom = 580.0
texture = ExtResource("21_j4ub7")
expand_mode = 1

[node name="Chapter4_preview" type="TextureRect" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 475.0
offset_top = 30.0
offset_right = 700.0
offset_bottom = 180.0
texture = ExtResource("19_mi0we")
expand_mode = 1

[node name="ChapterBrazil_preview" type="TextureRect" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 475.0
offset_top = 230.0
offset_right = 700.0
offset_bottom = 380.0
texture = ExtResource("23_a21tm")
expand_mode = 1

[node name="ChapterMortadon_preview" type="TextureRect" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 475.0
offset_top = 430.0
offset_right = 700.0
offset_bottom = 580.0
texture = ExtResource("23_j4ub7")
expand_mode = 1

[node name="ChapterGayttouze_preview" type="TextureRect" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 800.0
offset_top = 30.0
offset_right = 1025.0
offset_bottom = 180.0
texture = ExtResource("24_phw34")
expand_mode = 1

[node name="ChapterTrump_preview" type="TextureRect" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 800.0
offset_top = 230.0
offset_right = 1025.0
offset_bottom = 380.0
texture = ExtResource("15_sif16")
expand_mode = 1

[node name="ChapterAsterion_preview" type="TextureRect" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 800.0
offset_top = 430.0
offset_right = 1025.0
offset_bottom = 580.0
texture = ExtResource("13_sif16")
expand_mode = 1

[node name="Back_button" type="Button" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 40.0
offset_top = 580.0
offset_right = 101.0
offset_bottom = 620.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_font_sizes/font_size = 23
text = "Back"

[node name="Next_button" type="Button" parent="UI/Menu/Chapters_menu"]
layout_mode = 0
offset_left = 1055.0
offset_top = 580.0
offset_right = 1116.0
offset_bottom = 620.0
theme_override_colors/font_color = Color(0.98274976, 6.08854e-06, 1.540184e-06, 1)
theme_override_font_sizes/font_size = 23
text = "Next"

[connection signal="pressed" from="UI/Menu/MainContain/New game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="UI/Menu/MainContain/New game" to="UI/Menu" method="_on_new_game_pressed"]
[connection signal="pressed" from="UI/Menu/MainContain/Load chapter" to="UI/Menu" method="_on_load_chapter_pressed"]
[connection signal="pressed" from="UI/Menu/MainContain/SettingsButton" to="UI/Menu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="UI/Menu/MainContain/ending" to="UI/Menu" method="_on_ending_pressed"]
[connection signal="pressed" from="UI/Menu/MainContain/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="UI/Menu/Endings/next" to="UI/Menu" method="_on_next_pressed"]
[connection signal="pressed" from="UI/Menu/Endings/Quit" to="UI/Menu" method="_on_quit_pressed"]
[connection signal="pressed" from="UI/Menu/Endings2/previous" to="UI/Menu" method="_on_previous_pressed"]
[connection signal="value_changed" from="UI/Menu/DisplaySelector/VolumeSlider" to="UI/Menu" method="_on_h_slider_value_changed"]
[connection signal="pressed" from="UI/Menu/Chapters_menu/Chapter1" to="UI/Menu" method="_on_chapter_1_pressed"]
[connection signal="pressed" from="UI/Menu/Chapters_menu/Chapter2" to="UI/Menu" method="_on_chapter_2_pressed"]
[connection signal="pressed" from="UI/Menu/Chapters_menu/Chapter3" to="UI/Menu" method="_on_chapter_3_pressed"]
[connection signal="pressed" from="UI/Menu/Chapters_menu/Chapter4" to="UI/Menu" method="_on_chapter_4_pressed"]
[connection signal="pressed" from="UI/Menu/Chapters_menu/ChapterBrazil" to="UI/Menu" method="_on_chapter_brazil_pressed"]
[connection signal="pressed" from="UI/Menu/Chapters_menu/ChapterMortadon" to="UI/Menu" method="_on_chapter_mortadon_pressed"]
[connection signal="pressed" from="UI/Menu/Chapters_menu/ChapterGayttouzz" to="UI/Menu" method="_on_chapter_gayttouzz_pressed"]
[connection signal="pressed" from="UI/Menu/Chapters_menu/ChapterMinotaure" to="UI/Menu" method="_on_chapter_minotaure_pressed"]
[connection signal="pressed" from="UI/Menu/Chapters_menu/ChapterTrump" to="UI/Menu" method="_on_chapter_trump_pressed"]
[connection signal="pressed" from="UI/Menu/Chapters_menu/Back_button" to="UI/Menu" method="_on_back_button_pressed"]
